<resources>
    <string name="app_name">Rave</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string-array name="drawer_items">
        <item>Event Stream</item>
        <item>Itinerary</item>
        <item>Friends</item>
        <item>Favorites</item>
        <item>Night Recaps</item>
        <item>My Events</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="going_button">Going</string>
    <string name="description_title">Description</string>
    <string name="details_title">Details</string>
    <string name="date_title">Date</string>
    <string name="time_title">Time</string>
    <string name="start_time_title">Start Time</string>
    <string name="end_time_title">End Time</string>
    <string name="location_title">Location</string>
    <string name="type_title">Party Style</string>
    <string name="guest_list_title">Guest List</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title">Title</string>
    <string name="welcome_title">Welcome Title</string>
    <string name="welcome_text">extra stuff if we want</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_email">email</string>
    <string name="user_password">password</string>
    <string name="user_name">username</string>
    <string name="user_password_confirmation">confirm password</string>
    <string name="register_disclaimer">disclamer</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="action_search">Search</string>


</resources>
